move material to client ts

--- a/ClientApp/app/components/materialdemo/materialdemo.component.html
+++ b/ClientApp/app/components/materialdemo/materialdemo.component.html
@@ -16,4 +16,58 @@
         </md-radio-button>
     </md-radio-group>
     <div class="example-selected-value">Your favorite season is: {{favoriteSeason}}</div>
+    <!--datepicker-->
+    <md-input-container>
+        <input mdInput [mdDatepicker]="picker" placeholder="Choose a date">
+        <button mdSuffix [mdDatepickerToggle]="picker"></button>
+    </md-input-container>
+    <md-datepicker #picker></md-datepicker>
+    <!--input-->
+    <form class="example-form">
+        <md-input-container class="example-full-width">
+            <input mdInput placeholder="Company (disabled)" disabled value="Google">
+        </md-input-container>
+
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <md-input-container class="example-full-width">
+                        <input mdInput placeholder="First name">
+                    </md-input-container>
+                </td>
+                <td>
+                    <md-input-container class="example-full-width">
+                        <input mdInput placeholder="Long Last Name That Will Be Truncated">
+                    </md-input-container>
+                </td>
+            </tr>
+        </table>
+
+        <p>
+            <md-input-container class="example-full-width">
+                <textarea mdInput placeholder="Address">1600 Amphitheatre Pkwy</textarea>
+            </md-input-container>
+            <md-input-container class="example-full-width">
+                <textarea mdInput placeholder="Address 2"></textarea>
+            </md-input-container>
+        </p>
+
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <md-input-container class="example-full-width">
+                        <input mdInput placeholder="City">
+                    </md-input-container>
+                </td>
+                <td>
+                    <md-input-container class="example-full-width">
+                        <input mdInput placeholder="State">
+                    </md-input-container>
+                </td>
+                <td>
+                </td>
+            </tr>
+        </table>
+    </form>
+    Tung
 </md-card>
